# ImGuizmo-c

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  libMain.cpp
.devcontainer/: dev.Dockerfile  devcontainer.json
examples/: CMakeLists.txt
examples/sequencer/: main.cpp
examples/sequencer-cpp/: CMakeLists.txt  main.cpp
examples/sequencer-python/: sequencer-example.py
include/ImGuizmoC/: ImGuizmo.h  ImSequencer.h
src/: CMakeLists.txt  ImSequencer.cpp
